# OSSING

./: README.md  pyproject.toml
projekt/: ModelReader.py  can_cplex.py  can_heuristic.py  routing_viz.py
projekt/data/: data0.json  data1.json
