[project]
name = "ossing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cplex>=22.1.2.1",
    "docplex>=2.32.264",
    "matplotlib>=3.10.8",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.13",
]
